Implement collaboration features in episodeOfCare dossier (#154)
* Add create collaboration endpoint
* Add start and diagnosis fields to episode
* Add new report to episode
* Add FHIR proxy validations for zorginzage
* Implemented creating collaborations and viewing them including UI
* Implemented retrieving remote reports and validation in the FHIR proxy
